layout issues fixed

--- a/App/Themes/timon/Styles/styles.css
+++ b/App/Themes/timon/Styles/styles.css
@@ -3,6 +3,7 @@ html, body, #main-view{
 	height: 100%;
 	width: 100%;
 	overflow-x: hidden;
+	color:white;
 }
 
 #nav{
@@ -29,11 +30,9 @@ text-shadow: 0px 0px 0px #0;
 }
 
 #wrapper{
-	position: relative;
+	position: absolute;
 	width: 100%;
 	background: #222;
-	min-height: 100%;
-	padding: 50px 0;
 }
 
 .navbar-inverse .navbar-inner{
